[package]
name = "mouse-jump"
version = "0.1.0"
edition = "2021"
description = "PowerToys Mouse Jump equivalent for KDE Plasma 6 Wayland"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
smithay-client-toolkit = { version = "0.19", features = ["calloop"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"
xkbcommon = { version = "0.8", features = ["wayland"] }
calloop = "0.14"
calloop-wayland-source = "0.3"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
libc = "0.2"
